docs(readme): rewrite for accessibility (datahike/raster style) (#7)
The old README assumed category theory, AlgebraicJulia, and Lean in the first
line and led with SIR/Lotka-Volterra ODE composites and a GAT definition.
Rewrite to the replikativ house style (datahike/raster):

- plain-language value-prop tagline (no jargon in line 1); CT framed as the
  engine, 'you write schemas and ordinary Clojure'.
- prominent 'Try the playground' hook (see something with no install).
- 'What you can do with it' = emoji + bold-linked-topic + one plain sentence
  each (offloads to doc/*).
- ONE small, verified '60-second taste' (schema migration) instead of the big
  dynamics blocks.
- 'For Clojurians' spec/Datomic/core.async analogies; a 'Dig deeper' doc table.
- trimmed install + 3 optional-alias bullets + a short cats comparison.
- 484 → 156 lines; depth moved to the existing docs.

The 18-row Catlab/GATlab namespace-equivalence table (removed from the README)
is preserved as a new section in doc/architecture.md, which the README links.
The taste example is REPL-verified (ForgetWeight migration: 3 V, 2 E, weights
dropped).